refactor: deduplicate normalized quality evaluator messages